--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROSIGHT Network Planner v1.17 (Fixes)</title> <!-- Zmena titulku -->
+    <title>PROSIGHT Network Planner v1.18 (Default Tab & Reset Text)</title> <!-- Zmena titulku -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -13,34 +13,31 @@
 </head>
 <body>
     <div id="tooltip" style="position: absolute; opacity: 0; pointer-events: none;"></div>
-    <div id="reset-modal-overlay" class="modal-overlay" style="display: none;"> <div id="reset-modal-content" class="modal-content"> <h4>Vyberte typ resetu:</h4> <p>Naozaj chcete vymazať uložené dáta?</p> <div class="modal-buttons"> <button id="reset-actual-confirm" class="modal-button reset-actual">Reset Aktuálny</button> <button id="reset-vision-confirm" class="modal-button reset-vision">Reset Vízia</button> <button id="reset-both-confirm" class="modal-button reset-both">Reset Oboje</button> <button id="reset-cancel" class="modal-button cancel">Zrušiť</button> </div> </div> </div>
+    <!-- Zmenený text tlačidla reset-both-confirm -->
+    <div id="reset-modal-overlay" class="modal-overlay" style="display: none;"> <div id="reset-modal-content" class="modal-content"> <h4>Vyberte typ resetu:</h4> <p>Naozaj chcete vymazať uložené dáta?</p> <div class="modal-buttons"> <button id="reset-actual-confirm" class="modal-button reset-actual">Reset Aktuálny</button> <button id="reset-vision-confirm" class="modal-button reset-vision">Reset Vízia</button> <button id="reset-both-confirm" class="modal-button reset-both">Reset oboch</button> <button id="reset-cancel" class="modal-button cancel">Zrušiť</button> </div> </div> </div>
     <div class="app-container">
         <div class="view-toggle"> <button id="view-actual-button" class="toggle-button">Aktuálny stav</button> <span class="header-logo">PROSIGHT Slovensko a.s.</span> <button id="view-vision-button" class="toggle-button active">Vízia siete</button> </div>
         <div id="graph-container"> <svg id="network-svg" width="100%" height="100%"></svg> </div>
         <div id="panel-container">
-            <div id="summary-panel"> <h3 id="summary-title">Celkový Súhrn Siete (...)</h3> <p><i class="fas fa-users icon-before"></i>Celkom PFA (FC+): <span id="total-pfa">0</span></p> <p><i class="fas fa-chart-line icon-before"></i>Celkom Bodov (B): <span id="total-points">0</span> B</p> <p><i class="fas fa-euro-sign icon-before"></i>Celkom Provízie v Sieti: <span id="total-network-commission">0</span> €</p> <div class="bonus-toggle section-divider"> <label for="bonus-toggle-checkbox"> <input type="checkbox" id="bonus-toggle-checkbox"> Zapnúť Bonus za Vlastné Body </label> </div> <small id="summary-note">*Výpočet podľa aktuálneho pohľadu.</small>
-                <!-- Odstránené Reset tlačidlo odtiaľto -->
-                <!-- <div class="reset-container"> <button id="reset-network-button"><i class="fas fa-undo"></i> Reset siete</button> </div> -->
-             </div>
+            <div id="summary-panel"> <h3 id="summary-title">Celkový Súhrn Siete (...)</h3> <p><i class="fas fa-users icon-before"></i>Celkom PFA (FC+): <span id="total-pfa">0</span></p> <p><i class="fas fa-chart-line icon-before"></i>Celkom Bodov (B): <span id="total-points">0</span> B</p> <p><i class="fas fa-euro-sign icon-before"></i>Celkom Provízie v Sieti: <span id="total-network-commission">0</span> €</p> <div class="bonus-toggle section-divider"> <label for="bonus-toggle-checkbox"> <input type="checkbox" id="bonus-toggle-checkbox"> Zapnúť Bonus za Vlastné Body </label> </div> <small id="summary-note">*Výpočet podľa aktuálneho pohľadu.</small> </div> <!-- Reset button presunutý do pätičky -->
             <div id="detail-panel" style="display: none;">
                  <h3 id="detail-node-title">Detail Tímu: N/A</h3> <p><i class="fas fa-briefcase icon-before"></i>Aktuálna Pozícia: <span id="detail-node-position-static">N/A</span></p>
-                <div class="tab-buttons"> <button class="tab-button active" data-tab="edit" title="Upraviť Uzol"><i class="fas fa-pencil-alt"></i></button> <button class="tab-button" data-tab="stats" title="Štatistiky Tímu"><i class="fas fa-chart-bar"></i></button> <button class="tab-button" data-tab="subordinates" title="Spolupracovníci"><i class="fas fa-users"></i></button> <button class="tab-button" data-tab="add" title="Pridať Spolupracovníka"><i class="fas fa-user-plus"></i></button> </div>
+                 <!-- Upravené poradie tlačidiel záložiek - stats je prvé -->
+                <div class="tab-buttons">
+                     <button class="tab-button active" data-tab="stats" title="Štatistiky Tímu"><i class="fas fa-chart-bar"></i></button>
+                    <button class="tab-button" data-tab="edit" title="Upraviť Uzol"><i class="fas fa-pencil-alt"></i></button>
+                    <button class="tab-button" data-tab="subordinates" title="Spolupracovníci"><i class="fas fa-users"></i></button>
+                    <button class="tab-button" data-tab="add" title="Pridať Spolupracovníka"><i class="fas fa-user-plus"></i></button>
+                </div>
                 <div id="tab-content-container">
-                    <div id="tab-edit" class="tab-content active"> <div class="edit-node-form card"> <h4><i class="fas fa-pencil-alt icon-before"></i>Upraviť Uzol</h4> <div><label for="edit-position-select">Pozícia:</label><select id="edit-position-select"> </select></div> <div><label for="edit-label-input">Zobraz. text:</label><input type="text" id="edit-label-input"></div> <div id="edit-production-row"><label for="edit-production-input">Vlastná prod. (VB):</label><input type="number" id="edit-production-input" step="10"><small>(Akt. stav)</small></div> <div class="button-group"> <button id="save-node-changes-button"><i class="fas fa-save"></i> Uložiť</button> <button id="delete-node-button" class="delete-button"><i class="fas fa-trash-alt"></i> Odstrániť</button> <button id="mark-vision-button" class="vision-button"><i class="fas fa-star"></i> Označiť Víziu</button> </div> </div> </div>
-                    <div id="tab-stats" class="tab-content"> <div class="stats-display card"> <h4><i class="fas fa-chart-bar icon-before"></i>Štatistiky (<span id="stats-mode-label">Aktuálny stav</span>)</h4> <div class="stats-grid"> <p><i class="fas fa-user-friends icon-before"></i>Priami PFA (FC+): <span id="detail-direct-pfa">0</span></p> <p><i class="fas fa-users icon-before"></i>PFA v tíme (FC+): <span id="detail-total-team-pfa">0</span></p> <p><i class="fas fa-tachometer-alt icon-before"></i>Priemer VB/PFA: <span id="detail-avg-pfa-prod">0</span> VB</p> <p><i class="fas fa-layer-group icon-before"></i>Body tímu (SB): <span id="detail-group-points">0</span> B</p> <p><i class="fas fa-bullseye icon-before"></i>Cieľ pozície (B): <span id="detail-target-prod">N/A</span> B</p> <p><i class="fas fa-coins icon-before"></i>Provízia (VB): <span id="detail-own-commission">0</span> €</p> <p><i class="fas fa-award icon-before"></i>Bonus za VB: <span id="detail-bonus-amount">0</span> €</p> <p><i class="fas fa-network-wired icon-before"></i>Medziprovízia (SB): <span id="detail-interim-commission">0</span> €</p> <p class="total-income"><i class="fas fa-wallet icon-before"></i><strong>Príjem celkom (€):</strong> <span id="detail-total-income">0</span> €</p> </div> </div> </div>
+                    <!-- Upravené poradie obsahu záložiek - stats je prvé a aktívne -->
+                    <div id="tab-stats" class="tab-content active"> <div class="stats-display card"> <h4><i class="fas fa-chart-bar icon-before"></i>Štatistiky (<span id="stats-mode-label">Aktuálny stav</span>)</h4> <div class="stats-grid"> <p><i class="fas fa-user-friends icon-before"></i>Priami PFA (FC+): <span id="detail-direct-pfa">0</span></p> <p><i class="fas fa-users icon-before"></i>PFA v tíme (FC+): <span id="detail-total-team-pfa">0</span></p> <p><i class="fas fa-tachometer-alt icon-before"></i>Priemer VB/PFA: <span id="detail-avg-pfa-prod">0</span> VB</p> <p><i class="fas fa-layer-group icon-before"></i>Body tímu (SB): <span id="detail-group-points">0</span> B</p> <p><i class="fas fa-bullseye icon-before"></i>Cieľ pozície (B): <span id="detail-target-prod">N/A</span> B</p> <p><i class="fas fa-coins icon-before"></i>Provízia (VB): <span id="detail-own-commission">0</span> €</p> <p><i class="fas fa-award icon-before"></i>Bonus za VB: <span id="detail-bonus-amount">0</span> €</p> <p><i class="fas fa-network-wired icon-before"></i>Medziprovízia (SB): <span id="detail-interim-commission">0</span> €</p> <p class="total-income"><i class="fas fa-wallet icon-before"></i><strong>Príjem celkom (€):</strong> <span id="detail-total-income">0</span> €</p> </div> </div> </div>
+                    <div id="tab-edit" class="tab-content"> <div class="edit-node-form card"> <h4><i class="fas fa-pencil-alt icon-before"></i>Upraviť Uzol</h4> <div><label for="edit-position-select">Pozícia:</label><select id="edit-position-select"> </select></div> <div><label for="edit-label-input">Zobraz. text:</label><input type="text" id="edit-label-input"></div> <div id="edit-production-row"><label for="edit-production-input">Vlastná prod. (VB):</label><input type="number" id="edit-production-input" step="10"><small>(Akt. stav)</small></div> <div class="button-group"> <button id="save-node-changes-button"><i class="fas fa-save"></i> Uložiť</button> <button id="delete-node-button" class="delete-button"><i class="fas fa-trash-alt"></i> Odstrániť</button> <button id="mark-vision-button" class="vision-button"><i class="fas fa-star"></i> Označiť Víziu</button> </div> </div> </div>
                     <div id="tab-subordinates" class="tab-content"> <div class="subordinates-list card"> <h4><i class="fas fa-users icon-before"></i>Priami Spolupracovníci</h4> <ul id="subordinates-ul"> <li class="no-subordinates" style="display: none;">Žiadni priami spolupracovníci.</li> </ul> </div> </div>
                     <div id="tab-add" class="tab-content"> <div class="add-node-form card"> <h4><i class="fas fa-user-plus icon-before"></i>Pridať spolupracovníka</h4> <select id="add-position-select"> </select> <input type="number" id="add-count-input" value="1" min="1" class="count-input"> <button id="add-node-button"><i class="fas fa-plus"></i> Pridať</button> </div> </div>
                 </div>
             </div>
-             <!-- Pätička s Reset a Copyrightom -->
-             <div class="footer">
-                 <button id="reset-network-button"><i class="fas fa-undo"></i> Reset siete</button>
-                 <div class="footer-logo">
-                     <span>PROSIGHT Slovensko a.s.</span>
-                     <!-- Upravený rok -->
-                     <span class="copyright"> ©2025 MARTIN ŠAFFA Všetky práva vyhradené.</span>
-                 </div>
-             </div>
+             <div class="footer"> <button id="reset-network-button"><i class="fas fa-undo"></i> Reset siete</button> <div class="footer-logo"> <span>PROSIGHT Slovensko a.s.</span> <span class="copyright"> ©2025 MARTIN ŠAFFA Všetky práva vyhradené.</span> </div> </div>
         </div>
     </div>
     <script src="script.js"></script>
